# Projet_UFC

./: .gitignore  README.md  UFC.ipynb  pyproject.toml
FightPredix/: __init__.py  lib_caracteristic_collector.py  lib_front_page.py
