[project]
name = "ufc fight predict"
version = "0.1.0"
description = "Web Scraping and Machine Learning package to predict ufc's fight resultt"
authors = ["Jaillet Grégory and Cochereau Hugo"]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "black>=24.10.0",
    "bs4>=0.0.2",
    "pandas>=2.2.3",
    "selenium>=4.27.1",
]
